# amd_hip_tutorial

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
pthread/: serial.cxx
src/cxx_thread/: threads.cxx
src/heavy_kernel/: README.md  main.hip  main_1_stream.hip
src/hip/: README.md  hello.cxx  hello_world_gpu.cxx  matrix_multiplication.cxx  monte_carlo_v0.cxx  monte_carlo_v1.cxx  sq_cube_no_hipstream.cxx  sq_cube_with_hipstream.cxx  vector_add_v1.cxx  vector_addition.cxx
src/pthread/: serial.cxx  test_taskflow.cxx  threads.cxx
src/utils/: Timer.h  Timer.hpp
